# online-data-scientist

./: .gitignore  Dockerfile  README.md  app.py  code_executor.py  data.csv  data_processor.py  pyproject.toml  requirements.txt  verify_storage.py
.github/workflows/: ci.yaml  docker-publish.yaml
.opencode/: IMPROVEMENTS.md  README.md  STATE.md
pages/: Settings.py
reproduction/: repro.py  reproduce_issue.py  test_chat_input_behavior.py  test_exec.py  test_metadata.py  verify_chat_input.py
tests/: test_app.py  test_code_executor.py  test_data_processor.py  test_settings.py  verify_app_fix.py
