[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "online-data-scientist"
version = "1.0.0"
description = "AI-powered data scientist web application using Streamlit and OpenAI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
authors = [
    {name = "OpenCode"},
]
keywords = [
    "data-science",
    "ai",
    "streamlit",
    "openai",
    "visualization",
    "pandas",
    "polars",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    # Core web framework
    "streamlit>=1.28.0,<2.0.0",
    # AI/ML libraries
    "openai>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-ai-slim[openai]>=0.0.1,<1.0.0",
    # Data processing
    "pandas>=2.0.0,<3.0.0",
    "polars>=0.20.0,<1.0.0",
    "pyarrow>=14.0.0,<20.0.0",
    # Geospatial processing
    "geopandas[all]>=0.14.0,<1.0.0",
    # Visualization
    "altair>=5.0.0,<6.0.0",
    "plotly>=5.18.0,<6.0.0",
    "folium>=0.15.0,<1.0.0",
    "streamlit-folium>=0.18.0,<1.0.0",
    # HTTP client
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]
lint = [
    "pycodestyle>=2.11.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
]
all = [
    "online-data-scientist[dev,test,lint]",
]

[project.urls]
Homepage = "https://github.com/akolk/online-data-scientist"
Documentation = "https://github.com/akolk/online-data-scientist#readme"
Repository = "https://github.com/akolk/online-data-scientist.git"
Issues = "https://github.com/akolk/online-data-scientist/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".opencode/*",
    "reproduction/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.opencode
  | reproduction
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    "venv",
    ".opencode",
    "reproduction",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".opencode",
    "reproduction",
]

[tool.pycodestyle]
max-line-length = 120
ignore = [
    "E203",  # whitespace before ':' (black handles this)
    "E501",  # line too long (black handles this)
    "W503",  # line break before binary operator
]
